--- a/src/app/(beforeLogin)/_components/LoginModal.module.css
+++ b/src/app/(beforeLogin)/_components/LoginModal.module.css
@@ -93,6 +93,10 @@
   opacity: 0.5;
 }
 
+.actionButton:disabled:hover {
+  background-color: rgb(15, 20, 25);
+}
+
 .actionButton:hover {
   background-color: rgb(39, 44, 48);
 }
