--- a/src/app/(beforeLogin)/_components/SignUpModal.module.css
+++ b/src/app/(beforeLogin)/_components/SignUpModal.module.css
@@ -96,21 +96,7 @@
   background-color: rgb(39, 44, 48);
 }
 
-.closeButton {
-  width: 34px;
-  height: 34px;
-  border-radius: 17px;
-  border: none;
-  cursor: pointer;
-  background-color: #fff;
-  position: absolute;
-  left: 16px;
-  top: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.closeButton:hover {
-  background-color: rgba(15, 20, 25, 0.1);
+.error {
+  color: red;
+  font-weight: bold;
 }
